# university_programming_course

./: .gitignore  README.md
lab10_structure/: README.md  functions.c  main.c  struct.h
lab12_libraries/: README.md  main.c
lab13_cmake/: CMakeLists.txt  Makefile  README.md
lab13_cmake/include/: compgame.h
lab13_cmake/src/: compgame.c
lab14_lists/: README.md  main.c
lab15_files/: README.md  main.c
lab16_threads/: task1-2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8-9.c  threads.md
lab9_git/: README.md  sort.c
lab_debug/: README.md  task1_fixed.c  task2_fixed.c  task3_fixed.c  task4_fixed.c
